# x-mens-morris

./: .gitignore  LICENSE  README.md
three_mens_morris/: Cargo.toml  swagger.yaml
three_mens_morris/docs/: readme.md
three_mens_morris/frontend/: .gitignore  amplify-explicit.yml  app.json  eas.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
three_mens_morris/frontend/app/: colors.js  homepage.tsx  index.tsx  play.tsx
three_mens_morris/frontend/components/: Board.tsx  Board_backup.tsx  Bot.tsx  Rules.tsx
three_mens_morris/frontend/scripts/: build.sh
three_mens_morris/src/: bot.rs  database.rs  game_cli.rs  lib.rs  main.rs  move_def.rs  referee.rs  smart_bot.rs  state.rs  stupid_bot.rs  types.rs  ui.rs
three_mens_morris/tests/: stupid_bot_test.rs
three_mens_morris_v2/simulator/: bot.py  bot_test.py  empty_weight.json  expanded.json  main.py  mcts.py  model.py  rules.py  rules_test.py  weight.json  weight1.json
three_mens_morris_v2/three mens morris/three mens morris/: ContentView.swift  three_mens_morrisApp.swift
three_mens_morris_v2/three mens morris/three mens morris.xcodeproj/: project.pbxproj
three_mens_morris_v2/three mens morris/three mens morris.xcodeproj/project.xcworkspace/xcuserdata/minsung.xcuserdatad/: UserInterfaceState.xcuserstate
three_mens_morris_v2/three mens morris/three mens morrisTests/: three_mens_morrisTests.swift
three_mens_morris_v2/three mens morris/three mens morrisUITests/: three_mens_morrisUITests.swift  three_mens_morrisUITestsLaunchTests.swift
(+1 files in other folders)
