[package]
name = "three_mens_morris"
authors = ["Minsung Cho <ms98.cho@gmail.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web server stuffs
actix-web = "4"
mongodb = "2.8.2"
colored="2.1.0"
diesel = { version = "2.1.5", features = ["sqlite"] }
dotenv = "0.15.0"
rand = "0.8.5"
eframe = { features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
env_logger = { version = "0.11.3", default-features = false, features = [
    "auto-color",
    "humantime",
] }
serde = { version = "1.0.199" }
futures = { version = "0.3.30" }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
